
* SF #1874805: Syncing with Funambol results in loosing all-day property
  This now works thanks to the Synthesis data conversion rules.

* SF #2586600: Synchronisation with mobical.net fails
  Should work now because of the different SyncML implementation (untested).

* SF #2542968: separator for categories should not be escaped
  Done correctly by the Synthesis vcard conversion.

Known shortcomings in this release which will be fixed before the
final 0.9:

* Verbatim file backups of items on the SyncML server are currently
  not possible: the SyncEvolution "file" backend still exists, but
  all items are converted by the Synthesis engine and therefore must
  be in a format supported by the engine.

* HTTPS can be used with libsoup, but certificate checking is always
  disabled. Need to find a portable way to determine where the
  certificate file is on various systems.

* Log file handling is not yet unified: the traditional client.log
  contains only high-level SyncEvolution log entries. Low-level
  SyncML and engine log entries are in sysync_*.html files.

* stdout and stderr messages from system libraries are visible on the
  console. 0.8.1 used to redirect those into the client.log to hide
  this noise; this will be added again. In the meantime, ignore
  messages like "Deadlock potential - avoiding evil bug!". This is
  liborbit telling us that it is (hopefully successfully) handling
  something nasty.


SyncEvolution 0.8.1 -> 0.8.1a, 15.12.2008
-----------------------------------------
C++ client library: 7.0 plus some patches, see github
repository referenced in configure script.

A minor bug fix release, updating only necessary on Mac OS X.

* #2307976 "Trace/BPT trap - sync failure": occurs randomly in
  Mac OS X specific transport layer of the Funambol C++ client
  library. Avoided in 0.8.1a by using libcurl as transport,
  as in 0.7.


SyncEvolution 0.8 -> 0.8.1, 11.10.2008
--------------------------------------