@@ -3,6 +3,15 @@ PRODID:-//Ximian//NONSGML Evolution Calendar//EN
 VERSION:2.0
 METHOD:PUBLISH
 BEGIN:VJOURNAL
+SUMMARY:Only Summary
+END:VJOURNAL
+END:VCALENDAR
+
+BEGIN:VCALENDAR
+PRODID:-//Ximian//NONSGML Evolution Calendar//EN
+VERSION:2.0
+METHOD:PUBLISH
+BEGIN:VJOURNAL
 SUMMARY:Summary
 DESCRIPTION:Summary\nBody
 END:VJOURNAL
